--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mulmocast-mcp",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
   "type": "module",
   "main": "lib/index.js",
@@ -11,7 +11,7 @@
     }
   },
   "bin": {
-    "mulmocast-mcp": "lib/cli/bin.js"
+    "mulmocast-mcp": "lib/index.js"
   },
   "files": [
     "./lib"
